# microfix

./: CMakeLists.txt  LICENSE  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/mxgui/: .air.toml  Makefile  main.go  mxgui_windows_amd64.syso
cmd/mxgui/assets/css/: index.css
cmd/mxgui/assets/html/: dictionary.html  header.html  index.html  inspector.html  modal.html  settings.html  sidebar.html  stream.html  toast.html  toolbox.html
cmd/mxgui/assets/html/pages/: dictionary.html  index.html  settings.html  stream.html  toolbox.html
cmd/mxgui/assets/html/partials/dictionary/: definitions.html  field.html  message.html
cmd/mxgui/assets/html/partials/global/: header.html  modals.html  sidebar.html  toast.html
cmd/mxgui/assets/js/: codejar.min.js  script-runner.js
cmd/mxgui/internal/diff/: diff.go  diff_test.go
cmd/mxgui/internal/handlers/: app.go  handler_base.go  handler_dictionary.go  handler_global.go  handler_inspector.go  handler_script.go  handler_settings.go  handler_stream.go  handler_toolbox.go  handler_wails.go  handlers.go  template_helpers.go  utils.go  utils_test.go
cmd/mxgui/internal/inspector/: inspector.go  inspector_test.go
cmd/mxgui/internal/models/: types.go
cmd/mxgui/internal/shortcuts/: shortcuts.go
cmd/mxgui/internal/tfilelogger/: tfilelogger.go  tfilelogger_test.go
cmd/mxgui/internal/views/: dictionary.templ  dictionary_templ.go  header.templ  header_templ.go  layout.templ  layout_templ.go  modal.templ  modal_templ.go  script_runner.templ  script_runner_templ.go  settings.templ  settings_templ.go  sidebar.templ  sidebar_templ.go  stream.templ  stream_templ.go  toast.templ  toast_templ.go  toolbox.templ  toolbox_templ.go
cmd/mxshell/: buffer.go  config.go  main.go  mxshell_windows_amd64.syso  pretty.go
cmd/mxshell/handlers/: cmd_alias.go  cmd_config.go  cmd_fix.go  cmd_logs.go  cmd_others.go  cmd_session.go  registry.go
cmd/mxshell/internal/cli/: autocomplete.go  help.go  history.go  runner.go
cmd/mxshell/internal/handlers/: cmd_alias.go  cmd_config.go  cmd_fix.go  cmd_logs.go  cmd_others.go  cmd_session.go  registry.go
core/mfix/: field.go  field_test.go  message.go  message_test.go  spec.go  spec_parser.go  spec_parser_test.go  spec_test.go  utils.go  utils_test.go
core/mfix/spec/: FIX44.xml
internal/mxshell/config/: alias.go  alias_test.go  config.go  config_test.go
internal/mxshell/handlers/: cmd_alias.go  cmd_config.go  cmd_fix.go  cmd_logs.go  cmd_session.go  commands.go
internal/mxshell/pretty/: pretty.go  pretty_test.go
mockups/: mockup1.html  mockup2.html  mockup3.html  mockup4.html  mockup5.html  mockup6.html  mockup7.html  mockup8.html
pkg/ast/: ast.go  ast_test.go
pkg/broker/: broker.go  broker_test.go
pkg/executor/: ast.go  ast_test.go  control_flow.go  control_flow_test.go  core_cmds.go  executor.go  executor_basic_test.go  executor_e2e_test.go  executor_test.go  registry.go  substitute.go  substitute_test.go  util_cmds.go  wait_cmds.go
pkg/executor/handlers/: core_cmds.go  registry.go  util_cmds.go  wait_cmds.go
pkg/executor/internal/handlers/: core_cmds.go  registry.go  util_cmds.go  wait_cmds.go
pkg/macros/: macros.go  macros_test.go
pkg/message/: field.go  field_test.go  message.go  message_test.go
pkg/pretty/: pretty.go  pretty_test.go
pkg/ringbuf/: buffer.go  buffer_test.go
pkg/session/: actions.go  engine.go  engine_test.go  log.go  log_test.go  message_store.go  message_store_test.go  session.go  session_test.go  store.go  user_request.go
pkg/spec/: dictionary.go  dictionary_test.go  parser.go  parser_test.go  router.go  router_test.go  sampler.go  sampler_test.go  validator.go  validator_test.go
pkg/store/: config.go  config_test.go  store.go  store_test.go
pkg/transport/: connection.go  connection_impl.go  connection_test.go  framer.go  framer_test.go  mock_connection.go  mock_connection_test.go
scripts/: acceptor.mxs  initiator.mxs  multi_symbol_client.mxs  reject_test_client.mxs  send_order.mxs  session_recovery_check.mxs  setup.mxs
src/core/: CMakeLists.txt  convert.cpp  converter.cpp  field.cpp  message.cpp  spec.cpp  utils.cpp
src/core/include/mfix/: convert.hpp  converter.hpp  field.hpp  message.hpp  spec.hpp  utils.hpp
test/: CMakeLists.txt  conversion_test.cpp  field_test.cpp  message_test.cpp  spec_test.cpp  utils_test.cpp
(+17 files in other folders)
